# circom-mobile-benchmark

./: .gitignore  Cargo.toml  Config.toml  build.rs
circuits/: .gitignore  package.json  sha256.circom
ios/: MoproiOSBindings
ios/MoproApp/: ContentView.swift  sha256.zkey  verification_key.json
ios/MoproApp.xcodeproj/: project.pbxproj
ios/MoproApp.xcodeproj/xcshareddata/xcschemes/: MoproApp.xcscheme
src/: lib.rs  mopro.udl
test-vectors/circom/: inputs.json  sha256.cpp  verification_key.json
